--- a/examclock.html
+++ b/examclock.html
@@ -18,7 +18,7 @@ Duration in minutes: <input id="dur_in_min" type="text" size="4"/>
 Your browser does not support the HTML5 Canvas.
 </canvas>
 
-<p style="text-align:right"><a href="https://tjd1234.github.io/examclock/examclock.html">Source code.</a></p>
+<p style="text-align:right"><a href="https://github.com/tjd1234/examclock">Source code.</a></p>
 
 </body>
 </html>
